Add products to cart and add out of stock functionality

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve": "npx json-server Data/products.json --port 8000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
