--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-DB_CONNECT=mongodb+srv://sid10297:bhaiji9730@cluster0.vixxn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECT=mongodb+srv://sid10297:bhaiji9730@cluster0.vixxn.mongodb.net/productsDB?retryWrites=true&w=majority
