--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 DB_CONNECT=mongodb+srv://sid10297:bhaiji9730@cluster0.vixxn.mongodb.net/productsDB?retryWrites=true&w=majority
+TOKEN_SECRET=khdasjkdhasdkjashkj
